@@ -5,46 +5,16 @@ import com.project.back_end.models.Doctor;
 import com.project.back_end.models.Patient;
 import com.project.back_end.repo.AppointmentRepository;
 import com.project.back_end.repo.DoctorRepository;
-import com.project_back_end.repo.PatientRepository;
+import com.project.back_end.repo.PatientRepository;
 
-import jakarta.transaction.Transactional;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
+import jakarta.transaction.Transactional;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.*;
-
-/*
-  1. **Add @Service Annotation**:
-    - To indiAppointmentController {
-
-    private final AppointmentRepository appointmentRepository;
-    private final PatientRepository patientRepository;
-    private final DoctorRepository doctorRepository;
-    private final TokenService tokenService;
-    // Use fully-qualified type to avoid clash with org.springframework.stereotype.Service
-    private final com.project.back_end.services.Service sharedService; // common service that contains validateAppointment / validateToken
-
-    public AppointmentController
-  4. **Book Appointment Method**:
-    - Saves a new appointment to the database.
-    - Returns 1 on success, 0 on failure.
-
-  5. **Update Appointment Method**:
-    - Updates an existing appointment based on its ID.
-    - Uses sharedService.validateAppointment() to check business rules and availability.
-
-  6. **Cancel Appointment Method**:
-    - Cancels an appointment (delete) ensuring the patient who owns it is the one cancelling.
-
-  7. **Get Appointments Method**:
-    - Retrieves a list of appointments for a specific doctor on a particular day, optionally filtered by patient name.
-
-  8. **Change Status Method**:
-    - Updates the status of an appointment by ID.
-*/
 
 @Service
 public class AppointmentService {
@@ -53,14 +23,13 @@ public class AppointmentService {
     private final PatientRepository patientRepository;
     private final DoctorRepository doctorRepository;
     private final TokenService tokenService;
-    // Use fully-qualified type to avoid clash with org.springframework.stereotype.Service
-    private final com.project.back_end.services.Service sharedService; // common service that contains validateAppointment / validateToken
+    private final Service sharedService;
 
     public AppointmentService(AppointmentRepository appointmentRepository,
                               PatientRepository patientRepository,
                               DoctorRepository doctorRepository,
                               TokenService tokenService,
-                              com.project_back_end.services.Service sharedService) {
+                              Service sharedService) {
         this.appointmentRepository = appointmentRepository;
         this.patientRepository = patientRepository;
         this.doctorRepository = doctorRepository;
@@ -68,7 +37,6 @@ public class AppointmentService {
         this.sharedService = sharedService;
     }
 
-    // 4. Book Appointment Method
     @Transactional
     public int bookAppointment(Appointment appointment) {
         try {
@@ -80,142 +48,123 @@ public class AppointmentService {
         }
     }
 
-    // 5. Update Appointment Method
     @Transactional
     public ResponseEntity<Map<String, String>> updateAppointment(Appointment appointment) {
         Map<String, String> response = new HashMap<>();
 
         if (appointment.getId() == null) {
-            response.put("message", "Appointment ID is required for update.");
+            response.put("message", "Appointment ID is required.");
             return ResponseEntity.badRequest().body(response);
         }
 
-        Optional<Appointment> existingOpt = appointmentRepository.findById(appointment.getId());
-        if (existingOpt.isEmpty()) {
+        Optional<Appointment> existing = appointmentRepository.findById(appointment.getId());
+        if (existing.isEmpty()) {
             response.put("message", "Appointment not found.");
             return ResponseEntity.status(HttpStatus.NOT_FOUND).body(response);
         }
 
-        // Validate appointment details using shared service (business rules, conflicts, etc.)
         int validationCode = sharedService.validateAppointment(appointment);
         if (validationCode == -1) {
-            response.put("message", "Doctor not found or invalid appointment details.");
+            response.put("message", "Invalid doctor or appointment details.");
             return ResponseEntity.badRequest().body(response);
         }
         if (validationCode == 0) {
-            response.put("message", "Doctor is not available at the selected time.");
+            response.put("message", "Doctor not available at the selected time.");
             return ResponseEntity.badRequest().body(response);
         }
-        // validationCode == 1 → OK
 
         try {
             appointmentRepository.save(appointment);
             response.put("message", "Appointment updated successfully.");
             return ResponseEntity.ok(response);
-        } catch (Exception ex) {
-            ex.printStackTrace();
+        } catch (Exception e) {
+            e.printStackTrace();
             response.put("message", "Error updating appointment.");
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
         }
     }
 
-    // 6. Cancel Appointment Method
     @Transactional
     public ResponseEntity<Map<String, String>> cancelAppointment(long id, String token) {
         Map<String, String> response = new HashMap<>();
 
-        Optional<Appointment> existingOpt = appointmentRepository.findById(id);
-        if (existingOpt.isEmpty()) {
+        Optional<Appointment> existing = appointmentRepository.findById(id);
+        if (existing.isEmpty()) {
             response.put("message", "Appointment not found.");
             return ResponseEntity.status(HttpStatus.NOT_FOUND).body(response);
         }
 
-        Appointment appointment = existingOpt.get();
+        Appointment appointment = existing.get();
+        Long patientIdFromToken = tokenService.getPatientIdFromToken(token);
 
-        // Ensure the patient canceling the appointment is the owner
-        Long tokenPatientId = tokenService.getPatientIdFromToken(token);
-        Patient appointmentPatient = appointment.getPatient();
-
-        if (appointmentPatient == null || !Objects.equals(appointmentPatient.getId(), tokenPatientId)) {
-            response.put("message", "You are not authorized to cancel this appointment.");
+        if (appointment.getPatient() == null ||
+                !appointment.getPatient().getId().equals(patientIdFromToken)) {
+            response.put("message", "Unauthorized cancellation.");
             return ResponseEntity.status(HttpStatus.FORBIDDEN).body(response);
         }
 
         try {
             appointmentRepository.delete(appointment);
-            response.put("message", "Appointment cancelled successfully.");
+            response.put("message", "Appointment cancelled.");
             return ResponseEntity.ok(response);
-        } catch (Exception ex) {
-            ex.printStackTrace();
+        } catch (Exception e) {
+            e.printStackTrace();
             response.put("message", "Error cancelling appointment.");
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
         }
     }
 
-    // 7. Get Appointments Method
     @Transactional
     public Map<String, Object> getAppointment(String pname, LocalDate date, String token) {
         Map<String, Object> result = new HashMap<>();
 
-        // Extract doctor id from token
         Long doctorId = tokenService.getDoctorIdFromToken(token);
-        if (doctorId == null) {
-            result.put("appointments", Collections.emptyList());
+        if (doctorId == null || doctorRepository.findById(doctorId).isEmpty()) {
+            result.put("appointments", List.of());
             result.put("message", "Invalid doctor token.");
             return result;
         }
 
-        Optional<Doctor> doctorOpt = doctorRepository.findById(doctorId);
-        if (doctorOpt.isEmpty()) {
-            result.put("appointments", Collections.emptyList());
-            result.put("message", "Invalid doctor token.");
-            return result;
-        }
+        LocalDateTime start = date.atStartOfDay();
+        LocalDateTime end = date.plusDays(1).atStartOfDay();
 
-        LocalDateTime startOfDay = date.atStartOfDay();
-        LocalDateTime startOfNextDay = date.plusDays(1).atStartOfDay();
+        List<Appointment> list;
 
-        List<Appointment> appointments;
-
-        if (pname != null && !pname.trim().isEmpty() && !"null".equalsIgnoreCase(pname.trim())) {
-            appointments = appointmentRepository
+        if (pname != null && !pname.trim().isEmpty() && !"null".equalsIgnoreCase(pname)) {
+            list = appointmentRepository
                     .findByDoctorIdAndPatient_NameContainingIgnoreCaseAndAppointmentTimeBetween(
-                            doctorId,
-                            pname.trim(),
-                            startOfDay,
-                            startOfNextDay
-                    );
+                            doctorId, pname.trim(), start, end);
         } else {
-            appointments = appointmentRepository
-                    .findByDoctorIdAndAppointmentTimeBetween(
-                            doctorId,
-                            startOfDay,
-                            startOfNextDay
-                    );
+            list = appointmentRepository
+                    .findByDoctorIdAndAppointmentTimeBetween(doctorId, start, end);
         }
 
-        result.put("appointments", appointments);
+        result.put("appointments", list);
         return result;
     }
 
-    // 8. Change Status Method
     @Transactional
-    public ResponseEntity<Map<String, String>> changeStatus(long id, int status) {
+    public ResponseEntity<Map<String, String>> changeStatus(Long id, int status) {
         Map<String, String> response = new HashMap<>();
 
-        Optional<Appointment> existingOpt = appointmentRepository.findById(id);
-        if (existingOpt.isEmpty()) {
+        if (id == null) {
+            response.put("message", "Appointment ID required.");
+            return ResponseEntity.badRequest().body(response);
+        }
+
+        Optional<Appointment> existing = appointmentRepository.findById(id);
+        if (existing.isEmpty()) {
             response.put("message", "Appointment not found.");
             return ResponseEntity.status(HttpStatus.NOT_FOUND).body(response);
         }
 
         try {
             appointmentRepository.updateStatus(status, id);
-            response.put("message", "Appointment status updated successfully.");
+            response.put("message", "Status updated.");
             return ResponseEntity.ok(response);
-        } catch (Exception ex) {
-            ex.printStackTrace();
-            response.put("message", "Error updating appointment status.");
+        } catch (Exception e) {
+            e.printStackTrace();
+            response.put("message", "Error updating status.");
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
         }
     }
